--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
   margin: 0;
   color: white;
   font-family: Jura;
-  font-size: 48px;
+  font-size: 42px;
   border: none;
   line-height: 100%;
   transition: all 200ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -55,17 +55,17 @@ body{
   position: absolute;
 }
 .hero-title{
-  font-size: 128px;
+  font-size: 110px;
 }
 .hero-text{
   font-weight: 500;
-  width: 843px;
+  width: 700px;
   letter-spacing: -0.065em;
 }
 .inf-inf{
   padding-top: 25px;
 }
-.inf-title{
+h2{
   font-size: 64px;
   text-align: center;
 }
@@ -106,7 +106,7 @@ button:hover{
 }
 .cock:hover{
   box-shadow: inset 0px -1px 7px 7px rgba(0, 0, 0, 0.25);
-  transform: scale(1.01, 1);
+  transform: scale(1.01);
 }
 .inf-item .text{
   font-weight: 400;
